bin_PROGRAMS = tree

tree_SOURCES = \
	objparser.cpp\
	quaternion.cpp\
	renderer.cpp\
	texmap.cpp\
	turtle.cpp\
	expressionnode.cpp\
	expression.cpp\
	scanner.cpp\
	parser.cpp\
	turtlestate.cpp\
	vector3d.cpp\
	random.cpp\
	tree.cpp\
	treescene.cpp\
	main.cpp\
	#glmainwindow.cpp\
	#glwindow.cpp\
	#editortab.cpp


#noinst_HEADERS = \
	#Terafix.h\
	#TerafixScene.h\
	#CurveEditor.h\
	#CurveScene.h

AM_CXXFLAGS = @CXXFLAGS@ @GTKGLEXTMM_CFLAGS@

tree_LDADD = @LIBS@ @GTKGLEXTMM_LIBS@

